# cyberplotstyle

./: README.md  pyproject.toml
scripts/: create_assets.py  example_plots.py  trim_comments.py
src/cyberplotstyle/: __init__.py  colormaps.py  colors.py  cps.mplstyle  latex.mplstyle  presentation.mplstyle  tools.py
template/: mplstyle_template.mplstyle
