[project]
name = "cyberplotstyle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Fabian Roth", email = "roth@cps.tu-darmstadt.de" }
]
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 79

[tool.ruff.format]
docstring-code-format = true
quote-style = "double"

[tool.ruff.lint]
# See https://docs.astral.sh/ruff/rules/ for the meaning of all rules.
select = [
    "D",  # pydocstyle
    "E",  # pycodestyle
    "I",  # isort
    "N",  # pep8-naming
    "UP", # pyupgrade
]
ignore = [
    "D100",  # Missing docstring in public module
    "D101",  # Missing docstring in public class
    "D102",  # Missing docstring in public method
    "D103",  # Missing docstring in public function
    "D104",  # Missing docstring in public package
    "D107",  # Mising docstring in `__init__`
    "D203",  # 1 blank line required before class docstring; ignored in favor of D211
    "D213",  # ignored in favor of D212
    "E501",  # During development, we allow long lines.
    "E402",
    "E731",
    "E741",
    "UP038",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
